<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:padding="@dimen/_12sdp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/round_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSearch"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/round_icon_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/my_wallet"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toStartOf="@id/imgSearch"
        app:layout_constraintStart_toEndOf="@id/imgBack"
        app:layout_constraintTop_toTopOf="@id/imgBack"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/mr_garv"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/my_wallet_level_7"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/round_icon_add"
        app:backgroundTint="@color/dashboard_item1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/text_or_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAccount"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:src="@drawable/round_icon_dashboard"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fabAdd"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSetting"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:src="@drawable/round_icon_data"
        app:layout_constraintBottom_toBottomOf="@id/fabAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fabAdd"
        app:tint="@color/text_or_icon"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        app:constraint_referenced_ids="cardUSD, cardEUR, cardCAD, cardINR"
        app:flow_horizontalGap="@dimen/_8sdp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="@dimen/_8sdp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@id/fabAdd"
        app:layout_constraintTop_toBottomOf="@id/textSubtitle"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUSD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item1"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/usd"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_108"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/savings"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEUR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item2"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/eur"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_999"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/main_income"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCAD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item3"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/cad"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_777"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/expense"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardINR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dashboard_item4"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/inr"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_5500"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/assets"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_13ssp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>